<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:paddingLeft="10dip"
	android:paddingRight="10dip"
	android:paddingTop="10dip"
>

	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_marginBottom="15dip"
	>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
		>
			<TextView
				style="@style/LightDialogText"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/app_info_appli_name"
			></TextView>
			<TextView
				style="@style/LightDialogText"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/app_name"
				android:layout_marginLeft="15dip"
			></TextView>

			<TextView
				style="@style/LightDialogText"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/app_info_appli_version"
			></TextView>
			<TextView
				style="@style/LightDialogText"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/version"
				android:layout_marginLeft="15dip"
			></TextView>


			<TextView
				style="@style/LightDialogText"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/app_info_appli_site"
			></TextView>
			<TextView
				style="@style/LightDialogText"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/site_url"
				android:autoLink="web"
				android:layout_marginLeft="15dip"
			></TextView>

			<TextView
				style="@style/LightDialogText"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/app_info_appli_site_history"
			></TextView>
			<TextView
				style="@style/LightDialogText"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/site_history_url"
				android:autoLink="web"
				android:layout_marginLeft="15dip"
			></TextView>

			<TextView
				style="@style/LightDialogText"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/app_info_appli_author"
			></TextView>
			<TextView
				style="@style/LightDialogText"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="akira kuriyama"
				android:layout_marginLeft="15dip"
			></TextView>

			<TextView
				style="@style/LightDialogText"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/app_info_appli_email"
			></TextView>
			<TextView
				style="@style/LightDialogText"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/app_info_appli_email_msg"
				android:layout_marginLeft="15dip"
			></TextView>
			<TextView
				style="@style/LightDialogText"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/mail_address"
				android:autoLink="email"
				android:layout_marginLeft="15dip"
			></TextView>

		</LinearLayout>

	</ScrollView>
</LinearLayout>