<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
>
	<!-- タイトル -->
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/export_title"
		android:drawableLeft="@drawable/attachment"
		style="@style/ScreenTitle"
	>
	</TextView>
	<include
		layout="@layout/title_bottom_divider" />
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
	>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical"
		>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="15dip"
				android:text="@string/how_to_export_text"
				android:textSize="16dip"
				android:textStyle="bold"
			>
			</TextView>

			<Spinner
				android:id="@+id/export_method_spinner"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:drawSelectorOnTop="true"
				android:layout_marginTop="10dip"
			>
			</Spinner>
			<TextView
				android:id="@+id/export_to_mail_attached_notice"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dip"
				android:text="@string/export_to_mail_attached_notice"
				android:textSize="13dip"
			>
			</TextView>
			<TextView
				android:id="@+id/export_to_mail_message_body_notice"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dip"
				android:text="@string/export_to_mail_message_body_notice"
				android:textSize="13dip"
			>
			</TextView>
			<TextView
				android:id="@+id/export_to_sd_card_notice"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dip"
				android:text="@string/export_to_sd_card_notice"
				android:textSize="14dip"
			>
			</TextView>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="15dip"
				android:text="@string/export_period"
				android:textSize="16dip"
				android:textStyle="bold"
			>
			</TextView>
			<Spinner
				android:id="@+id/export_period_spinner"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:drawSelectorOnTop="true"
				android:layout_marginTop="10dip"
			>
			</Spinner>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				style="@style/export_specified_period_area"
				android:layout_marginTop="5dip"
			>
				>
				<LinearLayout
					android:id="@+id/export_period_start_area"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:layout_marginRight="15dip"
				>
					<TextView
						android:layout_width="50dip"
						android:layout_height="wrap_content"
						android:text="@string/export_period_start_text"
						android:layout_marginRight="10dip"
						android:gravity="center_horizontal"
					>
					</TextView>
					<Button
						android:id="@+id/export_period_start_button"
						android:layout_width="140dip"
						android:layout_height="wrap_content"
					>
					</Button>
				</LinearLayout>
				<LinearLayout
					android:id="@+id/export_period_end_area"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
				>
					<TextView
						android:layout_width="50dip"
						android:layout_height="wrap_content"
						android:text="@string/export_period_end_text"
						android:layout_marginRight="10dip"
						android:gravity="center_horizontal"
					>
					</TextView>
					<Button
						android:id="@+id/export_period_end_button"
						android:layout_width="140dip"
						android:layout_height="wrap_content"
					>
					</Button>
				</LinearLayout>
			</LinearLayout>
			<Button
				android:id="@+id/do_export_button"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/do_export_button_text"
				android:layout_marginTop="20dip"
			>
			</Button>
		</LinearLayout>
	</ScrollView>
</LinearLayout>