<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	android:id="@+id/layout_root"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:paddingLeft="10dip"
	android:paddingRight="10dip"
>


	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
	>
		<TextView
			style="@style/LightDialogText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/edit_category_category_name"
		>
		</TextView>
		<!-- カテゴリ名入力テキストボックス  -->
		<EditText
			android:id="@+id/input_value"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:focusable="true"
			android:inputType="text"
			android:layout_weight="1"
		>
		</EditText>
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
	>
		<TextView
			style="@style/LightDialogText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/edit_category_income_or_expense"
			android:layout_gravity="center_vertical"
		>
		</TextView>
		<RadioGroup
			android:layout_width="250sp"
			android:layout_height="wrap_content"
			style="@style/income_expnse_orientation"
		>
			<RadioButton
				style="@style/LightDialogText"
				android:id="@+id/income_flg_off"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/edit_category_expense"
				android:layout_marginRight="15sp"
			>
			</RadioButton>
			<RadioButton
				style="@style/LightDialogText"
				android:id="@+id/income_flg_on"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/edit_category_income"
			>
			</RadioButton>
		</RadioGroup>
	</LinearLayout>

	<ImageView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:src="@android:drawable/divider_horizontal_dark"
		android:scaleType="fitXY"
		android:gravity="fill_horizontal"
		android:layout_marginTop="10sp"
	>
	</ImageView>


</LinearLayout>